--- a/Unity.TextMeshPro.Editor.csproj
+++ b/Unity.TextMeshPro.Editor.csproj
@@ -677,6 +677,14 @@
     <None Include="Packages\com.unity.analytics\DataPrivacy\Unity.Analytics.DataPrivacy.asmdef" />
     <None Include="Packages\com.unity.analytics\Tests\Editor\Unity.Analytics.StandardEvents\Unity.Analytics.StandardEvents.EditorTests.asmdef" />
     <None Include="Packages\com.unity.analytics\Tests\Runtime\DataPrivacy\Unity.Analytics.DataPrivacy.Tests.asmdef" />
+    <None Include="Packages\com.unity.cinemachine\Editor\EditorResources\CMWaveform.compute" />
+    <None Include="Packages\com.unity.cinemachine\Editor\EditorResources\CMWaveform.shader" />
+    <None Include="Packages\com.unity.cinemachine\Editor\EditorResources\StdLib.hlsl" />
+    <None Include="Packages\com.unity.cinemachine\Editor\com.unity.cinemachine.Editor.asmdef" />
+    <None Include="Packages\com.unity.cinemachine\Runtime\com.unity.cinemachine.asmdef" />
+    <None Include="Packages\com.unity.cinemachine\Tests\Editor\com.unity.cinemachine.EditorTests.asmdef" />
+    <None Include="Packages\com.unity.cinemachine\Tests\Runtime\com.unity.cinemachine.Tests.asmdef" />
+    <None Include="Packages\com.unity.cinemachine\license.txt" />
     <None Include="Packages\com.unity.collab-proxy\Editor\Resources\Styles\CollabHistoryCommon.uss" />
     <None Include="Packages\com.unity.collab-proxy\Editor\Resources\Styles\CollabHistoryDark.uss" />
     <None Include="Packages\com.unity.collab-proxy\Editor\Resources\Styles\CollabHistoryLight.uss" />
