--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\script\BoardClass\Island.cs" />
     <Compile Include="Assets\script\BoardClass\VirtualTileMapBase\VirtualTileMap.cs" />
     <Compile Include="Assets\script\BoardClass\VirtualTileMapBase\VirtualTileMapEvent.cs" />
+    <Compile Include="Assets\script\FlyObject.cs" />
     <Compile Include="Assets\script\GlobalTickTimer\GlobalTickTimer.cs" />
     <Compile Include="Assets\script\GNB\CameraAction.cs" />
     <Compile Include="Assets\script\GNB\GNB_Button.cs" />
