유도미사일 타입 2개 추가

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Assets\script\GNB\CameraAction.cs" />
     <Compile Include="Assets\script\GNB\GNB_Button.cs" />
     <Compile Include="Assets\script\GNB\Trigger.cs" />
+    <Compile Include="Assets\script\homing\HomingObject.cs" />
+    <Compile Include="Assets\script\homing\HomingObject2.cs" />
     <Compile Include="Assets\script\manager\mainSingleton.cs" />
     <Compile Include="Assets\script\manager\SampleCam.cs" />
     <Compile Include="Assets\UICanvasManager.cs" />
